# infeNMPC

./: .gitignore  LICENSE  LLMJOURNAL.md  LLMREADME.md  README.md  base_solution.txt  controller_factory.py  data_save_and_plot.py  indexing_tools.py  infNMPC_options.py  initialization_tools.py  make_model.py  model_equations.py  model_output.txt  optimized_solution.txt  plant_output.txt  pyproject.toml  requirements.txt  run_MPC.py  steady_state_solution.txt  ternary_model_output.txt
Cumulative Error Calculation/: 00_NFE2.csv  01_NFE20.csv  02_NFE400.csv  03_Ninf=2.csv  04_barN1.csv  05_N10_barN50.csv  calculator
Plotting Tools/: 00_N2.csv  02_Ninf.csv  batch_plot.py
double_col/: P.txt  P_a2.txt  P_c2.txt  adaptiven10.tab  column2_dynamic.mod  column2_dynamic_soft.mod  column2_sens.mod  column2_ss.mod  column2_term_change.mod  column2_term_change_2.mod  column2_term_change_3.mod  column2_term_change_4.mod  cost_compare.m  costs.ods  desc_con_1norm_p01.tab  desc_con_1norm_p1.tab  desc_con_1norm_p3.tab  desc_con_1norm_p5.tab  desc_con_1norm_p7.tab  desc_con_1norm_p9.tab  desc_con_1norm_p99.tab  desc_con_n50_p01.tab  desc_con_n50_p1.tab  desc_con_n50_p3.tab  desc_con_n50_p5.tab  desc_con_n50_p7.tab  desc_con_n50_p9.tab  desc_con_n50_p99.tab  desc_con_p01.tab  desc_con_p01_mismatch.tab  desc_con_p01_seq.tab  desc_con_p01_sin.tab  desc_con_p1.tab  desc_con_p1_mismatch.tab  desc_con_p1_seq.tab  desc_con_p1_sin.tab  desc_con_p3.tab  desc_con_p3_mismatch.tab  desc_con_p3_seq.tab  desc_con_p3_sin.tab  (+180 more)
eNMPC Paper/: selfStabilizing_eNMPC_main.py  selfStabilizing_eNMPC_main2.py  selfStabilizing_eNMPC_main2_feedNoise.py
infeNMPC/: __init__.py  __main__.py  check_model.py  controllers.py  data_save_and_plot.py  infNMPC_options.py  initialization_tools.py  live_plot.py  make_model.py  model_equations.py  plant.py  run_MPC.py
(+137 files in other folders)
